# multi-winding-transformer

./: IT 8.11 Koppelfaktoren.ipynb  README.md  pyproject.toml
