[tool.poetry]
name = "multi-winding-transformer"
version = "0.1.0"
description = ""
authors = ["adrianschneider94 <post@adrian-schneider.de>"]

[tool.poetry.dependencies]
python = "^3.8"
sympy = "^1.9"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
